Remove conflict copy and fix moc spacing for light theme

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -5,7 +5,6 @@
 // These are my MOC images
 [saved-theme="dark"] div.moc img {
     filter: invert(70%);
-    margin: 1rem;
 }
 
 div.moc {
@@ -14,9 +13,6 @@ div.moc {
     flex-wrap: wrap;
     place-content: center space-between;
     justify-content: center;
-    font-size: 1.2rem;
-    font-family: var(--headerFont);
-    color: var(--dark);
 
     img {
         margin: 1rem;
@@ -25,20 +21,11 @@ div.moc {
     a {
         background-color: unset;
         display: flex;
-        width: auto;
-        flex-wrap: wrap;
-        place-content: center space-between;
-        justify-content: center;
+        flex-direction: column;
     }
 }
 
 div.mocitem {
     float: left;
     text-align: center;
-}
-
-div.moc a {
-    background-color: unset;
-    display: flex;
-    flex-direction: column;
 }
